--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ span {
 
 /*::::::::::::::::::::::::::::::::::MAIN:::::::::::::::::::::::::::::*/
 
+/* MAIN 1 */
 main {
     padding: 1em 0em 0em 3.5em;
     display: flex;
@@ -164,7 +165,7 @@ main {
     justify-content: center;
 }
 
-figure {
+.blockheberger figure {
     display: flex;
     flex-flow: column;
     width: 12em;
@@ -175,19 +176,19 @@ figure {
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.2);
 }
 
-figure img {
+.blockheberger figure img {
     object-fit: cover;
     width: 100%;
     height: 55%;
     border-radius: 15px 15px 0px 0px;
 }
 
-figure img:nth-child(4),
-figure img:nth-child(6) {
+.blockheberger figure img:nth-child(4),
+.blockheberger figure img:nth-child(6) {
     height: 10%;
 }
 
-figure:hover {
+.blockheberger figure:hover {
     box-shadow: 0px 0px 0px 0px;
 }
 
@@ -220,9 +221,50 @@ figcaption p:nth-child(2) {
     color: #0065FC;
 }
 
+/* MAIN 2 */
 .blockpopulaire {
     margin-left: 6em;
     background-color: #d9d9d9;
     border-radius: 15px 15px 15px 15px;
     width: 30%;
+}
+
+.titre2 h1 {
+    padding: 20px 0px 0px 20px;
+    margin-bottom: 0;
+}
+
+.fa-chart-line {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px 20px 0px 0px;
+    color: #0065FC;
+    font-size: 1.3em;
+}
+
+.blockpopulaire figure {
+    display: flex;
+    flex-flow: column;
+    width: 12em;
+    height: 10em;
+    padding: 0.5em;
+    border-radius: 15px 15px 15px 15px;
+    background-color: white;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.2);
+}
+
+.blockpopulaire figure img {
+    object-fit: cover;
+    width: 100%;
+    height: 55%;
+    border-radius: 15px 15px 0px 0px;
+}
+
+.blockpopulaire figure img:nth-child(4),
+.blockpopulaire figure img:nth-child(6) {
+    height: 10%;
+}
+
+.blockpopulaire figure:hover {
+    box-shadow: 0px 0px 0px 0px;
 }
