--- a/style.css
+++ b/style.css
@@ -142,27 +142,37 @@ span {
 
 /*::::::::::::::::::::::::::::::::::MAIN:::::::::::::::::::::::::::::*/
 
-/* MAIN 1 */
+/* MAIN */
 main {
     padding: 1em 0em 0em 3.5em;
     display: flex;
     flex-wrap: wrap;
 }
 
-.blockheberger {
-    background-color: #d9d9d9;
-    border-radius: 15px 15px 15px 15px;
-    width: 60%;
-}
-
-.titre h1 {
-    padding: 20px 0px 0px 20px;
-}
-
 .cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 1em;
+}
+
+.fa-star {
+    color: #0065FC;
+}
+
+.stargrey {
+    color: grey;
+}
+
+/* Block 1 */
+.titre h1 {
+    padding: 20px 0px 0px 20px;
+}
+
+.blockheberger {
+    background-color: #d9d9d9;
+    border-radius: 15px 15px 15px 15px;
+    width: 60%;
 }
 
 .blockheberger figure {
@@ -192,24 +202,16 @@ main {
     box-shadow: 0px 0px 0px 0px;
 }
 
-figcaption h1, p {
+.blockheberger figcaption h1, p {
     font-family: 'raleway', sans-serif;
 }
 
-figcaption p:nth-child(1) {
+.blockheberger figcaption p:nth-child(1) {
     font-weight: bold;
 }
 
-figcaption p:nth-child(2) {
+.blockheberger figcaption p:nth-child(2) {
     margin: -10px 0px 0px 0px;
-}
-
-.fa-star {
-    color: #0065FC;
-}
-
-.stargrey {
-    color: grey;
 }
 
 .plus p {
@@ -221,7 +223,7 @@ figcaption p:nth-child(2) {
     color: #0065FC;
 }
 
-/* MAIN 2 */
+/* Block 2 */
 .blockpopulaire {
     margin-left: 6em;
     background-color: #d9d9d9;
@@ -244,9 +246,9 @@ figcaption p:nth-child(2) {
 
 .blockpopulaire figure {
     display: flex;
-    flex-flow: column;
-    width: 12em;
-    height: 10em;
+    flex-flow: row;
+    width: 22.5em;
+    height: 8em;
     padding: 0.5em;
     border-radius: 15px 15px 15px 15px;
     background-color: white;
@@ -255,16 +257,38 @@ figcaption p:nth-child(2) {
 
 .blockpopulaire figure img {
     object-fit: cover;
-    width: 100%;
-    height: 55%;
-    border-radius: 15px 15px 0px 0px;
+    width: 40%;
+    height: 100%;
+    border-radius: 15px 0px 0px 15px;
 }
 
-.blockpopulaire figure img:nth-child(4),
-.blockpopulaire figure img:nth-child(6) {
+.blockpopulaire figure img:nth-child(3) {
     height: 10%;
 }
 
 .blockpopulaire figure:hover {
     box-shadow: 0px 0px 0px 0px;
 }
+
+.blockpopulaire figcaption {
+    padding-left: 0.5em;
+}
+
+.blockpopulaire figcaption h1, p {
+    font-family: 'raleway', sans-serif;
+}
+
+.blockpopulaire figcaption p:nth-child(1) {
+    font-weight: bold;
+}
+
+.blockpopulaire figcaption p:nth-child(2) {
+    margin: -10px 0px 0px 0px;
+}
+
+
+
+
+/* Block 3 */
+
+/*:::::::::::::::::::::::::::::::::Footer::::::::::::::::::::::::::::*/
