--- a/style.css
+++ b/style.css
@@ -149,10 +149,17 @@ main {
     flex-wrap: wrap;
 }
 
-.cards {
+.cards1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 1em;
+}
+
+.cards2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-bottom: 1em;
 }
 
@@ -193,16 +200,11 @@ main {
     border-radius: 15px 15px 0px 0px;
 }
 
-.blockheberger figure img:nth-child(4),
-.blockheberger figure img:nth-child(6) {
-    height: 10%;
-}
-
 .blockheberger figure:hover {
     box-shadow: 0px 0px 0px 0px;
 }
 
-.blockheberger figcaption h1, p {
+.blockheberger figcaption p {
     font-family: 'raleway', sans-serif;
 }
 
@@ -262,9 +264,6 @@ main {
     border-radius: 15px 0px 0px 15px;
 }
 
-.blockpopulaire figure img:nth-child(3) {
-    height: 10%;
-}
 
 .blockpopulaire figure:hover {
     box-shadow: 0px 0px 0px 0px;
@@ -274,7 +273,7 @@ main {
     padding-left: 0.5em;
 }
 
-.blockpopulaire figcaption h1, p {
+.blockpopulaire figcaption p {
     font-family: 'raleway', sans-serif;
 }
 
@@ -286,9 +285,44 @@ main {
     margin: -10px 0px 0px 0px;
 }
 
-
-
-
 /* Block 3 */
+.blockactiviter { 
+    border-radius: 15px 15px 15px 15px;
+    width: 100%;
+}
+
+.titre3 h1 {
+    padding: 20px 0px 0px 20px;
+    margin-bottom: 0;
+}
+
+.blockactiviter figure {
+    display: flex;
+    flex-flow: column;
+    width: 18em;
+    height: 25em;
+    border-radius: 15px 15px 15px 15px;
+    background-color: white;
+    box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.2);
+}
+
+.blockactiviter figure img {
+    object-fit: cover;
+    width: 100%;
+    height: 85%;
+    border-radius: 15px 15px 0px 0px;
+}
+
+
+.blockactiviter figure:hover {
+    box-shadow: 0px 0px 0px 0px;
+}
+
+.blockactiviter figcaption {
+    padding-left: 1em;
+    font-family: 'raleway', sans-serif;
+    font-weight: bold;
+}
+
 
 /*:::::::::::::::::::::::::::::::::Footer::::::::::::::::::::::::::::*/
