--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@ body {
     margin: 0;
 }
 
+p, h2 {
+    font-family: 'raleway', sans-serif;
+    font-weight: 300;
+}
+
 li {
+    font-family: 'raleway', sans-serif;
+    font-weight: 700;
     list-style-type: none;
 }
 
@@ -17,16 +24,15 @@ li {
     justify-content: space-between;
 }
 
-.booki {
-    color: #0065FC;
-    font-size: 1.3em;
+.booki img{
+    height: 1.5em;
 }
 
 .headerlist li {
     display: inline;
     font-size: 1.2em;
-    padding-top: 2.3em;
     margin-right: 4em;
+    padding-top: 2.3em;
     padding-left: 25px;
     padding-right: 25px;
 }
@@ -36,9 +42,14 @@ li {
     border-top: solid #0065FC;
 }
 
+.description p {
+   margin: 0;
+   padding: 0.2em;
+   font-weight: 400;
+}
 .description p:nth-child(1) {
-    font-weight: bold;
-    font-size: 1.3em;
+    font-weight: 700;
+    font-size: 1.5em;
 }
 
 /* RECHERCHE */
@@ -73,8 +84,37 @@ button {
     color: white;
     background-color:rgb(12, 133, 231);
     border-color: rgb(12, 133, 231);
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0px 15px 15px 0px;
     padding: 15px 25px 15px 25px;
+}
+
+/* NAVIGATION */
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    margin: 1.5em 0em 0em 3.5em;
+}
+
+.nav p {
+    font-weight: 700;
+    font-size: 1.3em;
+}
+
+.nav li {
+    display: inline;
+    margin-right: 2em;
+    padding: 0.6em 1.5em 0.6em 0.6em;
+    font-size: large;
+    border: solid;
+    border-color: #d9d9d9;
+    border-radius: 30px 30px 30px 30px;
+}
+
+.nav li:hover {
+    background-color: #DEEBFF;
+    border-color: #DEEBFF;
 }
 
 /* icone */
@@ -83,58 +123,22 @@ button {
 .fa-heart, 
 .fa-dog, 
 .fa-info{
-    color: rgb(12, 133, 231);
-}
-
-/* NAVIGATION */
-.nav {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 50px;
-    margin-right: 800px;
-}
-.nav p:hover {
-    color: white;
-    background-color: rgb(12, 133, 231);
-}
-
-.nav h1 {
-    padding-top: 10px;
-    font-size: 1.5em;
-}
-
-.nav p {
-    text-align: end;
-    font-size: large;
-    padding-right: 5px;
-    border: solid;
-    border-color: lightgrey;
-    border-radius: 30px 30px 30px 30px;
-    box-shadow: 0px 2px 2px 0px;
-}
-
-.fa-money-bill-wave, 
-.fa-child-reaching, 
-.fa-heart, 
-.fa-dog{
-    padding: 10px 10px 10px 10px;
-    border-radius: 50px 50px 50px 50px;
-    background-color: rgb(222, 247, 247);
+    color: #0065FC;
+    padding: 15px;
 }
 
 /* PHRASE */
 .text {
-    margin-left: 50px;
+    margin-left: 3.5em;
 }
 
 span {
-    margin-left: 30px;
+    margin-left: 0.5em;
     color: gray;
 }
 
 .fa-info {
-    background-color: rgb(237, 245, 245);
-    padding:  10px 15px 10px 15px;
+    padding:  5px 10px 5px 10px;
     border: solid 1px;
     border-color: lightgrey;
     border-radius: 50px 50px 50px 50px;
@@ -175,7 +179,9 @@ main {
 }
 
 /* Block 1 */
-.titre h1 {
+.titre h2 {
+    font-weight: 700;
+    font-size: 1.5em;
     padding: 20px 0px 0px 20px;
 }
 
@@ -208,11 +214,11 @@ main {
 }
 
 .blockheberger figcaption p {
-    font-family: 'raleway', sans-serif;
+    font-weight: 300;
 }
 
 .blockheberger figcaption p:nth-child(1) {
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .blockheberger figcaption p:nth-child(2) {
@@ -236,7 +242,9 @@ main {
     width: 30%;
 }
 
-.titre2 h1 {
+.titre2 h2 {
+    font-weight: 700;
+    font-size: 1.5em;
     padding: 20px 0px 0px 20px;
     margin-bottom: 0;
 }
@@ -294,7 +302,9 @@ main {
     width: 100%;
 }
 
-.titre3 h1 {
+.titre3 h2 {
+    font-weight: 700;
+    font-size: 1.5em;
     padding: 20px 0px 0px 20px;
     margin-bottom: 0;
 }
@@ -321,7 +331,7 @@ main {
     box-shadow: 0px 0px 0px 0px;
 }
 
-.blockactiviter figcaption {
+.blockactiviter figcaption p {
     padding-left: 1em;
     font-family: 'raleway', sans-serif;
     font-weight: bold;
