--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0em 3.5em 0em 3.5em;
 }
 
 p, h2 {
@@ -15,7 +15,7 @@ li {
 
 /* Header Texte */
 .blocheadertext {
-    margin: 2em 3em 0em 3em;
+    margin-top: 2em;
 }
 
 .headertext {
@@ -31,13 +31,12 @@ li {
 .headerlist li {
     display: inline;
     font-size: 1.2em;
-    margin-right: 4em;
-    padding-top: 2.3em;
     padding-left: 25px;
     padding-right: 25px;
 }
 
 .headerlist li:hover {
+    padding-top: 2.3em;
     color: #0065FC;
     border-top: solid #0065FC;
 }
@@ -54,9 +53,7 @@ li {
 
 /* RECHERCHE */
 .search {
-    display: flex;
-    margin-top: 50px;
-    margin-left: 50px;
+    display: flex; 
 }
 
 .search :hover {
@@ -83,7 +80,7 @@ button {
     font-size: large;
     color: white;
     background-color:rgb(12, 133, 231);
-    border-color: rgb(12, 133, 231);
+    border: none;
     border-radius: 0px 15px 15px 0px;
     padding: 15px 25px 15px 25px;
 }
@@ -94,7 +91,7 @@ button {
     flex-direction: row;
     justify-content: flex-start;
     width: 100%;
-    margin: 1.5em 0em 0em 3.5em;
+    margin-top: 1em;
 }
 
 .nav p {
@@ -105,7 +102,7 @@ button {
 .nav li {
     display: inline;
     margin-right: 2em;
-    padding: 0.6em 1.5em 0.6em 0.6em;
+    padding: 0.8em 1.2em 0.6em 0.6em;
     font-size: large;
     border: solid;
     border-color: #d9d9d9;
@@ -119,29 +116,27 @@ button {
 
 /* icone */
 .fa-money-bill-wave, 
-.fa-child-reaching, 
+.fa-person, 
 .fa-heart, 
 .fa-dog, 
 .fa-info{
     color: #0065FC;
     padding: 15px;
-}
-
-/* PHRASE */
-.text {
-    margin-left: 3.5em;
+    font-size: 1.3em;
 }
 
 span {
     margin-left: 0.5em;
-    color: gray;
+    font-family: 'raleway', sans-serif;
+    font-weight: 400;
 }
 
 .fa-info {
-    padding:  5px 10px 5px 10px;
+    padding:  5px 8px 5px 8px;
     border: solid 1px;
     border-color: lightgrey;
     border-radius: 50px 50px 50px 50px;
+    font-size: 0.6em;
 }
 
 
@@ -151,7 +146,7 @@ span {
 
 /* MAIN */
 main {
-    padding: 1em 0em 0em 3.5em;
+    padding-top: 1em;
     display: flex;
     flex-wrap: wrap;
 }
@@ -165,9 +160,8 @@ main {
 
 .cards2 {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 1em;
+    margin: 0em -2.4em 5em -2.4em;
 }
 
 .fa-star {
@@ -226,7 +220,7 @@ main {
 }
 
 .plus p {
-    padding: 0px 0px 20px 20px;
+    padding: 1em 0em 0em 3em;
     font-weight: bold;
 }
 
@@ -236,7 +230,7 @@ main {
 
 /* Block 2 */
 .blockpopulaire {
-    margin-left: 6em;
+    margin-left: 9em;
     background-color: #d9d9d9;
     border-radius: 15px 15px 15px 15px;
     width: 30%;
@@ -297,7 +291,7 @@ main {
 }
 
 /* Block 3 */
-.blockactiviter { 
+.blockactiviter {
     border-radius: 15px 15px 15px 15px;
     width: 100%;
 }
@@ -307,6 +301,7 @@ main {
     font-size: 1.5em;
     padding: 20px 0px 0px 20px;
     margin-bottom: 0;
+    margin-left: -0.8em;
 }
 
 .blockactiviter figure {
@@ -333,6 +328,7 @@ main {
 
 .blockactiviter figcaption p {
     padding-left: 1em;
+    padding-top: 0.3em;
     font-family: 'raleway', sans-serif;
     font-weight: bold;
 }
@@ -344,9 +340,8 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     background-color: #d9d9d9;
-    margin-left: 3em;
     margin-bottom: 3em;
-    width: 90%;
+    width: 100%;
 }
 
 footer p{
